2013-12-03  Rob Buis  <rob.buis@samsung.com>

        [css shapes] layout for new ellipse syntax
        https://bugs.webkit.org/show_bug.cgi?id=124621

        Reviewed by Dirk Schulze.

        Implement support for doing layout with the new ellipse shape syntax,
        including basic animation support.

        Test: fast/shapes/shape-outside-floats/shape-outside-floats-ellipse-000.html

        * rendering/shapes/Shape.cpp:
        (WebCore::Shape::createShape): Convert new ellipse to a layout shape.
        * rendering/style/BasicShapes.cpp:
        (WebCore::BasicShape::canBlend): Ignore ellipses with values that
            cannot be interpolated.
        (WebCore::BasicShapeEllipse::floatValueForRadiusInBox): Helper function to calculate
            either radiusX or radiusY, shared by clip-path and shape code paths.
        (WebCore::BasicShapeEllipse::path):
        * rendering/style/BasicShapes.h:

2013-12-03  Frédéric Wang  <fred.wang@free.fr>

        Add an MathMLSelectElement class to implement <maction> and <semantics>.
        <https://webkit.org/b/120058>

        Reviewed by Chris Fleizach.

        Tests: mathml/presentation/maction-dynamic.html
               mathml/presentation/maction.html
               mathml/presentation/semantics.html

        This adds a new MathMLSelectElement class to prepare the implementation
        of the <maction> and <semantics> elements, for which only one "selected"
        child is visible. We now simply display the first child of the
        <semantics> element instead of hiding the annotations and this allows to
        handle the use case of SVG-in-MathML as generated by Instiki when
        bug 124128 is fixed ; Gecko's selection algorithm will be implemented
        later (bug 100626). We now also rely on the @actiontype and @selection
        attributes to select the visible <maction> child ; It remains to deal
        with the user interaction (bug 85734).

        * CMakeLists.txt: add the new files.