@@ -1,5 +1,12 @@
 2013-12-03  Rob Buis  <rob.buis@samsung.com>
 
+        Fix build break after r160007.
+
+        * rendering/style/BasicShapes.cpp:
+        (WebCore::BasicShape::canBlend):
+
+2013-12-03  Rob Buis  <rob.buis@samsung.com>
+
         [css shapes] layout for new ellipse syntax
         https://bugs.webkit.org/show_bug.cgi?id=124621
 
